--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Hongbusi" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-    <title>starter-vue</title>
+    <title>Hongbusi</title>
     <script>
       (function () {
         const prefersDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches
